--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,10 @@
     <string name="play">play</string>
     <string name="pause">pause</string>
     <string name="stop">stop</string>
+    <string name="title_activity_lol">LOLActivity</string>
+    <string name="action_playlist">action_playlist</string>
+    <string name="action_add_playlist">add</string>
+    <string name="action_del_playlist">del</string>
+    <string name="action_edit_playlist">edit</string>
 
 </resources>
