播放列表初步完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="action_add_playlist">add</string>
     <string name="action_del_playlist">del</string>
     <string name="action_edit_playlist">edit</string>
+    <string name="last">last</string>
+    <string name="next">next</string>
 
 </resources>
