把控制部分拆出来

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,9 @@
     <string name="find">find</string>
     <string name="cancel">cancel</string>
     <string name="submit">submit</string>
+    <string name="song">song</string>
+    <string name="artist">artist</string>
+    <string name="album">album</string>
+    <string name="add_to_list">add_to_list</string>
 
 </resources>
