--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="album">album</string>
     <string name="add_to_list">add_to_list</string>
     <string name="title_activity_list">ListActivity</string>
+    <string name="mode">mode</string>
 
 </resources>
